--- a/admin/package.json
+++ b/admin/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/styled-components": "^5.1.10",
+    "@types/styled-system": "^5.1.11",
     "craco": "^0.0.3",
     "craco-alias": "^3.0.1",
     "eslint-loader": "^4.0.2",
@@ -21,6 +22,7 @@
     "react-promise-tracker": "^2.1.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.0",
+    "styled-system": "^5.1.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
