--- a/admin/package.json
+++ b/admin/package.json
@@ -13,9 +13,12 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.10",
     "@types/styled-system": "^5.1.11",
+    "axios": "^0.21.1",
     "craco": "^0.0.3",
     "craco-alias": "^3.0.1",
+    "dotenv": "^10.0.0",
     "eslint-loader": "^4.0.2",
+    "formik": "^2.2.9",
     "prettier": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,7 +29,8 @@
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "craco start",
