--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,11 +10,13 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-navigation/native": "^5.9.4",
     "@types/styled-components": "^5.1.11",
     "axios": "^0.21.1",
     "dotenv": "^10.0.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-safe-area-context": "^3.2.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
@@ -22,8 +24,10 @@
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
     "@types/jest": "^26.0.23",
-    "@types/react-native": "^0.64.5",
+    "@types/react": "^17.0.13",
+    "@types/react-native": "^0.64.10",
     "@types/react-test-renderer": "^16.9.2",
+    "@types/styled-components-react-native": "^5.1.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
     "jest": "^26.6.3",
