--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^10.0.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-paper": "^4.9.2",
     "react-native-safe-area-context": "^3.2.0",
+    "react-native-vector-icons": "^8.1.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
